# xtelemdb

./: .gitignore  LICENSE  README.md  exLines.json  not_added.json  pyproject.toml  scratch.py  setup.sql  setup_users.sql  start_stop_time.txt  viewsMain.sql  xtelemdb.session.sql
src/xtelemdb/: cli.py  core.py  db.py
src/xtelemdb/commands/: JSONB_tables.py  _base.py  ingest.py  inventory.py  listen.py  replicate.py  sqlMain.py  verify.py  watch.py  watch_files.py
